kubernetes/apps/cloud/wordpress/riva/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-apps-riva-httproute
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: Riva
spec:
  hostnames:
    - "riva-va.nl"
    - "www.riva-va.nl"
  parentRefs:
    - name: external-direct
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: riva-wordpress
          port: 80
